--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Front Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <a href="recipes/grilled-garlic-bread.html">Grilled Garlic Bread</a>
     <a href="recipes/awesome-pasta-salad.html">Awesome Pasta Salad</a>
     <a href="recipes/orange-and-lime-margarita.html">Orange and Lime Margarita</a>
